fix: jd/css/jd_form.css: Firefox: wrong position of button of getting verification code

--- a/jd/css/jd_form.css
+++ b/jd/css/jd_form.css
@@ -13,6 +13,7 @@ form {
 }
 
 input {
+	border: none;
 	height: 30px;
 	width: 250px;
 }
